<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp">

    <TextView
            android:id="@+id/txtViewPrgrssHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:gravity="center" />

    <ProgressBar
            android:id="@+id/prgrssBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:layout_weight="0.5"
            android:visibility="visible" />

    <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:gravity="center"
            android:text="@string/EXERCISE_HEADING" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/txtViewTask1"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:paddingLeft="15dp"
                android:text="@string/ACTIVE_TASK_1_TITLE"
                android:textColor="#000000"
                android:textSize="20sp" />

        <CheckBox
                android:id="@+id/chkBox1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="top" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/txtViewTask2"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:paddingLeft="15dp"
                android:text="@string/ACTIVE_TASK_2_TITLE"
                android:textColor="#000000"
                android:textSize="20sp" />

        <CheckBox
                android:id="@+id/chkBox2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="top" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/txtViewTask3"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:paddingLeft="15dp"
                android:text="@string/ACTIVE_TASK_3_TITLE"
                android:textColor="#000000"
                android:textSize="20sp" />

        <CheckBox
                android:id="@+id/chkBox3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="top" />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/txtViewTask4"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:paddingLeft="15dp"
                android:text="@string/ACTIVE_TASK_4_TITLE"
                android:textColor="#000000"
                android:textSize="20sp" />

        <CheckBox
                android:id="@+id/chkBox4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="top" />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/txtViewTask5"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:paddingLeft="15dp"
                android:text="@string/ACTIVE_TASK_5_TITLE"
                android:textColor="#000000"
                android:textSize="20sp" />

        <CheckBox
                android:id="@+id/chkBox5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="top" />

    </LinearLayout>

</LinearLayout>
